[package]
name = "telers"
version = "1.0.0-alpha.1"
edition = "2021"
description = "An asynchronous framework for Telegram Bot API written in Rust"
repository = "https://github.com/Desiders/telers"
license = "MIT OR Apache-2.0"
keywords = ["bot", "telegram", "telegram-bot", "telegram-bot-api", "telers"]
categories = ["web-programming", "api-bindings", "asynchronous"]

[features]
default = []
# Include all possible features
full = ["storages"]
# Include all possible storages
storages = ["redis-storage", "memory-storage"]
# For possible use redis FSM storage
redis-storage = ["redis"]
# For possible use memory FSM storage
memory-storage = ["bincode"]

[dependencies]
tokio = { version = "1.22", features = ["sync", "macros", "signal", "fs"] }
reqwest = { version = "0.11", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.16"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
dashmap = "5.4"
regex = "1.6"
backoff = "0.4"
bytes = "1.3"
uuid = { version = "1.2", features = ["v4"] }

redis = { version = "0.23", features = ["tokio-comp"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "router"
harness = false