[package]
name = "telers-macros"
version = "1.0.0-alpha.1"
edition = "2021"
description = "Macros for telers"
rust-version = "1.60"
repository = "https://github.com/Desiders/telers"
license = "MIT OR Apache-2.0"
keywords = ["bot", "telegram", "telegram-bot", "telegram-bot-api", "telers"]
categories = ["web-programming", "api-bindings", "asynchronous"]

[features]
default = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
 
[dev-dependencies]
# This dependency is not necessarily the latest version
telers = { path = "../telers", version = "1.0.0-alpha.14", features = ["default"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
