[package]
name = "telers"
version = "1.0.0-alpha.16"
edition = "2021"
description = "An asynchronous framework for Telegram Bot API written in Rust"
rust-version = "1.65"
repository = "https://github.com/Desiders/telers"
license = "MIT OR Apache-2.0"
keywords = ["bot", "telegram", "telegram-bot", "telegram-bot-api", "telers"]
categories = ["web-programming", "api-bindings", "asynchronous"]

[features]
default = []
# Include all possible features
full = ["storages"]
# Include all possible storages
storages = ["redis-storage", "memory-storage"]
# For possible use redis FSM storage
redis-storage = ["redis"]
# For possible use memory FSM storage
memory-storage = ["bincode"]

[dependencies]
telers-macros = { path = "../telers-macros", version = "1.0.0-alpha.2", features = ["default"] } 
tokio = { version = "1.36", features = ["sync", "macros", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.11", features = ["multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
strum = "0.26"
strum_macros = "0.26"
futures = "0.3"
async-trait = "0.1"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
chashmap = "2.2"
regex = "1.10"
backoff = "0.4"
bytes = "1.5"
takecell = "0.1"
pathdiff = "0.2"
uuid = { version = "1.7", features = ["v4"] }

redis = { version = "0.24", features = ["tokio-comp"], optional = true }
bincode = { version = "1.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
