[package]
name = "input_file"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
telers = { path = "../../telers", features = ["default"] }
tokio = { version = "1.28", features = ["macros"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
reqwest = "0.11"
futures = "0.3"
bytes = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }